maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: '(' expected but identifier found.
   if estSurBiscuit()
      ^