maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit())
  {while ((!(getDirection() == Direction.NORTH && !estFaceMur()) && (!estSurBiscuit())))
   {keepHandOnSideWall()};
   if estSurBiscuit()
   {prendBiscuit();return();
    allerAuNord()}
                    
  }                   
                    
         
                    
 prendBiscuit()                   
}






def allerAuNord()
{while (getDirection() == Direction.NORTH && !estFaceMur()&& (!estSurBiscuit()))
{avance()} ; droite()}




def keepHandOnSideWall()
{gauche();
 if (estFaceMur())
 {droite();if (estFaceMur()) {droite(); if (estFaceMur()){droite()}}; avance()}
 else
                          {avance()}}